<resources>
    <string name="app_language">spanish</string>
    <string name="default_notification_channel_id" translatable="false">fme_default_channel</string>
    <string name="fme_message">Notificacion</string>
    <string name="msg_token_fme" translatable="false">InstanceID Token: %s</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="title_activity_register">Registrar</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="action_sign_up">Regístrate</string>
    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="error_invalid_password">Contraseña inválida</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_server">Error en el servidor</string>
    <string name="error_incorrect_email">Correo electrónico no registrado</string>
    <string name="error_network">Conexión de red no disponible</string>
    <string name="image_tooltip">Imagen</string>
    <string name="clothe_detail_name">name</string>
    <string name="clothe_detail_comment">comment</string>
    <string name="clothe_detail_brand">Marca: %s</string>
    <string name="clothe_detail_price">Precio: $%s</string>
    <string name="dummy_test">Test</string>
    <string name="color_test_indication">Responde honestamente las siguientes preguntas.</string>
    <string name="color_test_question_one">¿El color de tus ojos tiene algo de amarillo?</string>
    <string name="color_test_question_two">¿Tus ojos son claros?</string>
    <string name="color_test_question_three">¿Tus ojos tienen un mismo color por completo?</string>
    <string name="color_test_question_four">¿Cuando te asoleas tu piel se pone rojiza?</string>
    <string name="color_test_question_five">¿Tu piel es blanca, marfil o rosada en el rostro?</string>
    <string name="color_test_question_six">¿Tienes manchas, acné marcado o cicatrices en la piel de tu rostro?</string>
    <string name="color_test_question_seven">¿El color de tu cabello tiene tonos amarillos o naranja?</string>
    <string name="color_test_question_eight">¿Tu color de cabello tiene tonos más rubios o naranjas que otro color?</string>
    <string name="color_test_question_nine">¿El color de tu cabello es de un solo tono?</string>
    <string name="color_test_answer_yes">Si</string>
    <string name="color_test_answer_no">No</string>
    <string name="button_send">Enviar</string>
    <string name="user_profile_name">Nombre de usuario</string>
    <string name="user_profile_email">Correo electronico</string>
    <string name="user_profile_genre">Género</string>
    <string name="user_profile_color">Color</string>
    <string name="user_profile_body">Cuerpo</string>
    <string name="list_characteristic_desc">Descripción del rasgo</string>
    <string name="characteristic_instruction">Selecciona los rasgos correspondientes a tu cuerpo</string>
    <string name="caracteristicasl_cuerpo">Especificar caracteristicas del cuerpo</string>
    <string name="form_register_name">Nombre</string>
    <string name="form_register_email">Correo electrónico</string>
    <string name="form_register_confirm_password">Confirmar contraseña</string>
    <string name="form_register_signup">Registrar</string>
    <string name="form_register_gender">Género</string>
    <string name="form_register_gender_woman">Mujer</string>
    <string name="form_register_gender_man">Hombre</string>
    <string name="error_password_confirmation">La confirmación de contraseña no coincide</string>
    <string name="form_register_gender_woman_value">woman</string>
    <string name="form_register_gender_man_value">man</string>
    <string name="guest">Invitado</string>
    <string name="offline">Sin conexión</string>
    <string name="empty_list">Sin contenido</string>
    <string name="hello_username">Hola %s</string>
    <string name="your_closet_ideal">Tu closet ideal</string>
    <string name="closet_fme">Closet FME</string>
    <string name="looks">Estilos</string>
    <string name="trends">Tendencias</string>
    <string name="dress_code">Código de vestimenta</string>
    <string name="your_style">Tu estilo</string>
    <string name="tips">Tips</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="pasos">Pasos a seguir: </string>
    <string name="continuar">Continuar</string>
    <string name="tomar_fotografia_cuerpo">Tomar fotografia del cuerpo</string>
    <string name="contestar_cuestionario">Contestar el cuestionario</string>
    <string name="listo">¡¡Listo!!</string>
    <string name="wishlist">Lista de deseos</string>
    <string name="felicidades_text">Felicidades %s has completado la fase de indentificación y tus resultados serán utilizados para crear tu closet ideal!!</string>
    <string name="tipo_de_cuerpo">Tipo de cuerpo:</string>
    <string name="body_type">body_type</string>
    <string name="estacion">Estación:</string>
    <string name="color">color</string>
    <string name="title_activity_trend">TrendActivity</string>
    <string name="favs">Favoritos</string>
    <string name="building">En construcción…</string>
    <string name="category">Category</string>
    <string name="mensaje_go_test">El cuerpo será calculado. Mientras, puedes contestar el test</string>
    <string name="go">Ir</string>
    <string name="color_test_question">Pregunta</string>
    <string name="try_again">Reintentar</string>
    <string name="share">Compartir</string>
    <string name="share_with">Compartir con</string>
    <string name="contact">Contacto</string>
    <string name="create_look">Crear look</string>
    <string name="options">Opciones</string>
    <string name="home_item">Home</string>
    <string name="productos_item">Productos</string>
    <string name="compras_item">Carrito</string>
    <string name="ordenes_item">Ordenes</string>
    <string name="facturas_item">Facturas</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuración</string>
    <string name="no_result">No hay resultados</string>
    <string name="try_later">Intenta más tarde</string>
    <string name="your_style_is">Tu estilo es:</string>
    <string name="wayDressing">Way dressing</string>
    <string name="questions_venas">¿De que color son tus venas?</string>
    <string name="calido_1">
        Piel: dorada, bronce o aceituna.\nOjos: miel, marrón oscuro, verdes o colores mezclados.\nCabello: Café , Castaño oscuro, rojizo, rubio dorado.
    </string>
    <string name="calido_2">
        Piel: rosada, melocotón o color marfil.\nOjos: azul, verde, color miel, avellana.\nCabello: Negro, Café o Cenizo.
    </string>
    <string name="frio_1">
        Piel: blanca, beige o color olivo.\nOjos: Color azul intenso, café oscuro o café avellana,\nCabello: Negro, Café o Cenizo.
    </string>
    <string name="frio_2">
        Piel: rosada, beige claro, amarillento.\nOjos: gris azul, verde, dorados, avellana marrón.\nCabello: Rojo oscuro, rubio claro, rubio.
    </string>
    <string name="descripciones_pregunta">Con cual de estas descripciones te idenficas más:</string>
    <string name="edit_text">Haz doble click para ingresar texto</string>
    <string name="complete">Terminar</string>
    <string name="publish_comment">Escribe algo…</string>
    <string name="over_text_limit">Has excedido el limite de palabras</string>
    <string name="material_calendar_monday">L</string>
    <string name="material_calendar_tuesday">M</string>
    <string name="material_calendar_wednesday">M</string>
    <string name="material_calendar_thursday">J</string>
    <string name="material_calendar_friday">V</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>
    <string name="material_calendar_today_button">Hoy</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancelar</string>
    <string name="welcome_title">Bienvenidos a Fashion Me, tu asesor de imagen personal.</string>
    <string name="welcome_body">En Fme conocerás tu tipo de cuerpo así como los colores que son los ideales para ti.\n\n
        Con estos resultados se creará tu closet ideal, único e irrepetible para que puedas armar los mejores looks dependiendo de tus características, estas prendas las podrás adquirir si lo deseas y aprenderás a tener un nuevo hábito de compra de acuerdo a tus propias características para verte siempre fenomenal.\n\n
        Te daremos los mejores tips de cómo vestirte y siempre tendrás un look para cada ocasión.\n\n
        Conocerás todas las tendencias y códigos de vestimenta para vestirte fácilmente y estar siempre a la moda, ya que de ahora en adelante sólo te pondrás lo que más te favorece!!!</string>
    <string name="title_recommend">Recomendaciones</string>
    <string name="suggestions">Sugerencias</string>
    <string name="filter">Subcategorias</string>
    <string name="show_looks">Ver looks</string>
    <string name="look_saved">Look guardado</string>
    <string name="or">ó</string>
    <string name="resume">RESUME LOCATION UPDATES</string>
    <string name="pause">Pausar</string>
    <string name="about">Acerca de</string>
    <string name="version_app">Versión %s</string>
    <string name="visit_webpage">Visita la página web</string>
    <string name="visit_instagram">Visitanos en Instagram</string>
    <string name="trends_title_favorites">Tendencias</string>
    <string name="tips_title_favorites">Tips</string>
    <string name="trips_title_favorites">Viajes</string>
    <string name="clothes_title_favorites">Ropa</string>
    <string name="ways_title_favorites">Maneras de vestir</string>
    <string name="configuration">Configuracion</string>
    <string name="settings_list_language_dialog_title">Seleccionar idioma</string>
    <string name="settings_list_language_title">Idioma</string>
    <string name="settings">Ajustes</string>
    <string name="item_home_recommendations">Recomendación</string>
    <string name="item_home_create_look">Crear look</string>
    <string name="item_home_journey">Viaje</string>
    <string name="not_answer_test_style">No has contestado el test de estilo</string>
    <string name="edit_photo_profile">Cambiar foto de perfil</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="basic_configuration">Configuración basica</string>
    <string name="gallery">Galería</string>
    <string name="camera">Cámara</string>
    <string name="delete_photo">Eliminar foto</string>
    <string name="profile">Perfil</string>
    <string name="shopping">Compras</string>
    <string name="my_looks">Mis looks</string>
    <string name="chat">Chat</string>
    <string name="chat_assessor">Asesor</string>
    <string name="form_register_country">Pais</string>
    <string name="form_register_birthday">Fecha de nacimiento</string>
    <string name="help">Ayuda</string>
    <string name="settings_toolbar_title">Toolbar</string>
    <string name="settings_toolbar_description">Cambia el color de la toolbar</string>
    <string name="settings_icons_description">Cambia el color de los iconos en el menu principal</string>
    <string name="settings_icons_title">Iconos</string>
</resources>