<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.fayweb.fashionme.view.ResultActivity">

    <TextView
        android:id="@+id/tvFelicidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:textAppearance="@android:style/TextAppearance.Theme"
        android:textSize="20sp"
        tools:text="@string/felicidades_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFelicidades"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="8dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tipo_de_cuerpo"
                android:textAppearance="@android:style/TextAppearance.Theme"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvFelicidadesValueBodyType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                tools:text="@string/body_type"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/estacion"
                android:textAppearance="@android:style/TextAppearance.Theme"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvFelicidadesValueEstacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                tools:text="@string/color"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgPaletteResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            tools:src="@drawable/logo_fashion"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnResultContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:theme="@style/myButtons"
        android:layout_alignParentBottom="true"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>
