<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="15dp"
    >

    <TextView
        android:id="@+id/dialog_button_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_photo_profile"
        android:layout_marginBottom="45dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/btnGallery"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_photo_library"
                />

            <TextView
                android:id="@+id/tvGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/btnCamera"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_photo_camera"
                />

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_delete_48dp_black"
                />

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_photo"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>