<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.fayweb.fashionme.fragment.RegisterFragment"
    android:background="#616161"
    >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:errorEnabled="true"
                android:textColorHint="@android:color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_register_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:errorEnabled="true"
                android:textColorHint="@android:color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:hint="@string/form_register_email"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white"
                android:textColorHint="@android:color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionNext"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white"
                android:textColorHint="@android:color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/form_register_confirm_password"
                    android:imeOptions="actionNext"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                >

                <TextView
                    android:id="@+id/gender_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_register_gender"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    />

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    >

                    <RadioButton
                        android:id="@+id/female_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "@string/form_register_gender_woman"
                        android:textColor="@android:color/white"
                        />
                    <RadioButton
                        android:id="@+id/male_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_register_gender_man"
                        android:textColor="@android:color/white"
                        />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                >
                <TextView
                    android:id="@+id/country_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_register_country"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    />

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:ccp_showFullName="true"
                    app:ccp_showPhoneCode="false"
                    app:ccp_showNameCode="false"
                    android:orientation="horizontal"
                    app:ccp_contentColor="@color/colorWhite"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_autoDetectLanguage="true"
                    />

            </LinearLayout>


            <EditText
                android:id="@+id/tiet_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_register_birthday"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white"
                />

            <Button android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_register_signup"
                android:theme="@style/myButtons"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/signup_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:layout_gravity="center"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
